--- a/src/App.css
+++ b/src/App.css
@@ -215,11 +215,12 @@ cursor: pointer;
   border-radius: 20%;
   height: auto;
   margin-bottom: 0;
-  margin-top: 25px;
+  margin-top: 5px;
   margin-right: 15px;
 }
 
 .favourite-meal-name{
+  display: block;
   letter-spacing: 1px;
   font-weight: 500;
   color: rgb(36, 22, 20);
@@ -231,12 +232,14 @@ cursor: pointer;
   border-bottom-right-radius: 20px ;
   border-top-right-radius: 2px;
   border-bottom-left-radius: 2px;
+  font-size: 0.8rem;
 }
 
 .close-button{
+  display: block;
   position: relative;
-  left:73%;
-  top: -42%;
+  left:35%;
+  top: 3%;
   font-size: 1.6rem;
   color: rgb(255, 250, 250);
 }
