--- a/src/App.css
+++ b/src/App.css
@@ -81,9 +81,11 @@ cursor: pointer;
   justify-content: center;
   flex-direction: column;
   margin-top: 45px;
-
+  max-width: 740px;
  
 }
+
+
 .meals {
   
   background-color: rgb(250, 160, 160);
@@ -122,6 +124,16 @@ cursor: pointer;
   margin-top: -20px;
 }
 
+.searched-meal-thumb{
+  margin-top: 25px;
+  margin-bottom: 5px;
+}
+
+.searched-meal-recipe-btn{
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
 .like-btn{
   position: relative;
   top: -3.5rem;
@@ -133,7 +145,14 @@ cursor: pointer;
   outline: none;
   
 }
+.searched-meal-like-btn{
+  top: 1.8rem;
+  margin-top: -15px;
+}
 
+.searched-meal-name{
+  margin-top: -20px;
+}
 .heart-btn {
   background: none;
   color: rgb(28, 21, 34);
@@ -156,7 +175,18 @@ cursor: pointer;
  
 }
 
+.recipe-toggle-btn{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 2px;
+}
 
+.recipe-arrow{
+  margin-top: 6px;
+  margin-left: 5px;
+  font-size: 1.2rem;
+}
 .ingredients-title, .instructions-title {
   font-size: 1.1rem;
   text-transform: uppercase;
