--- a/src/styles/FavouriteRecipe.css
+++ b/src/styles/FavouriteRecipe.css
@@ -26,6 +26,7 @@
   margin-bottom: 0;
   margin-top: 5px;
   margin-right: 15px;
+  cursor: pointer;
 }
 
 .favourite-meal-name{
@@ -42,6 +43,7 @@
   border-top-right-radius: 2px;
   border-bottom-left-radius: 2px;
   font-size: 0.8rem;
+
 }
 
 .close-button{
@@ -51,6 +53,8 @@
   top: 3%;
   font-size: 1.6rem;
   color: rgb(255, 250, 250);
+  cursor: pointer;
+
 }
 
 .favourite-meal-recipe-container{
@@ -71,9 +75,17 @@
   padding: 10px;
   max-width: 300px;
   margin-left: 30%;
+  margin-top: -10px;
   border-radius: 8px;
 }
 
-.favourite-meal-recipe-description{
-  color: aliceblue;
+.fav-recipe-close-btn{
+  display: block;
+  position: relative;
+  left:45%;
+  margin-top: 3%;
+  font-size: 1.8rem;
+  cursor: pointer;
+  color: #301a18;
+
 }
